corrects spacing to recaptcha

--- a/css/main.scss
+++ b/css/main.scss
@@ -174,7 +174,7 @@ footer>.row {
 }
 
 #rc-anchor-container {
-    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 
